--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-build/
-*.ipr
-run/
-*.iws
-out/
-*.iml
-.gradle/
-output/
-bin/
-libs/
-
+# eclipse
+bin
+*.launch
+.settings
+.metadata
 .classpath
 .project
-.idea/
-classes/
-.metadata
-.vscode
-.settings
-*.launch
 
-.DS_STORE
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea/*
+!.idea/scopes
 
-.architectury-transformer/
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
+runs
