--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,35 @@
-org.gradle.jvmargs=-Xmx4192M
+# Important Notes:
+# Every field you add must be added to the root build.gradle expandProps map.
 
-minecraft_version=1.19.4
-enabled_platforms=fabric,forge
+# Project
+version=2.0.0
+group=mom.wii.takeitslow
+java_version=21
 
-archives_base_name=take-it-slow
-mod_version=1.2.0
-maven_group=dev.igalaxy.takeitslow
+# Common
+minecraft_version=1.21.4
+mod_name=Take it Slow
+mod_author=igalaxy
+mod_id=takeitslow
+license=MIT
+credits=
+description=Who needs sprinting anyways?
+minecraft_version_range=[1.21.4, 1.22)
+## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
+## https://projects.neoforged.net/neoforged/neoform
+neo_form_version=1.21.4-20241203.161809
+# The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
+parchment_minecraft=1.21.4
+parchment_version=2024.12.22
 
-architectury_version=8.1.73
+# Fabric
+fabric_version=0.112.2+1.21.4
+fabric_loader_version=0.16.9
 
-fabric_loader_version=0.14.7
+# NeoForge
+neoforge_version=21.4.33-beta
+neoforge_loader_version_range=[4,)
 
-forge_version=1.19.4-45.0.9
-
-cloth_version = 10.+
-modmenu_version = 6.1.0-rc.4
-
-
-
+# Gradle
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
