--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
     modImplementation "dev.isxander:yet-another-config-lib:3.6.2+1.21.4-fabric"
+    modImplementation "com.terraformersmc:modmenu:13.0.0"
 }
 
 loom {
